# othub

./: .gitignore  .taurignore  QUICKSTART.md  README.md  TAURI_MIGRATION.md  index.html  package.json  tailwind.config.js  teste.html
public/images/: README.md
src/: App.jsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BottomSplitter.jsx  ContextMenu.jsx  EnterGame.jsx  GameBottomPanel.jsx  GameInterface.jsx  GameLeftPanel.jsx  GameMapPanel.jsx  GameRightPanel.jsx  MainWindow.jsx  MiniWindow.jsx  OtcImage.jsx  PerformanceStatsOverlay.jsx  TopStatsBar.jsx  UIWindow.jsx
src/components/modules/: BattleList.jsx  Inventory.jsx  Minimap.jsx
src/components/ui/: ContextMenu.jsx  OTCLIENT_IMAGES.md
src/game/: GameContext.jsx  defaultPlayer.js  g_game.js  index.js
src/hooks/: useWindowVisibility.js
src/modules/client/: index.js
src/modules/client_background/: index.jsx
src/modules/client_bottommenu/: index.jsx
src/modules/client_debug_info/: index.jsx
src/modules/client_entergame/: index.jsx
src/modules/client_locales/: index.jsx
src/modules/client_options/: index.jsx
src/modules/client_serverlist/: index.jsx
src/modules/client_styles/: index.js  styles.css
src/modules/client_topmenu/: index.jsx
src/modules/game_actionbar/: index.jsx
src/modules/game_analyser/: index.jsx
src/modules/game_attachedeffects/: index.jsx
src/modules/game_battle/: index.jsx
src/modules/game_blessing/: index.jsx
(+184 files in other folders)
